--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "babel-jest": "20.0.3",
     "babel-loader": "8.0.2",
     "babel-plugin-styled-components": "^1.7.1",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "css-loader": "0.28.7",
+    "css-loader": "1.0.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -27,27 +26,30 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
+    "file-loader": "2.0.0",
+    "fork-ts-checker-webpack-plugin": "^0.4.9",
     "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
+    "html-webpack-plugin": "3.2.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
     "promise": "8.0.1",
+    "prop-types": "^15.6.2",
     "raf": "3.4.0",
     "react": "^16.5.1",
     "react-dev-utils": "^5.0.2",
+    "react-docgen-typescript": "^1.8.1",
     "react-dom": "^16.5.1",
     "react-styleguidist": "^7.3.8",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.6.2",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.11.3",
-    "webpack-manifest-plugin": "1.3.2",
+    "sw-precache-webpack-plugin": "0.11.5",
+    "typescript": "^3.0.3",
+    "url-loader": "1.1.1",
+    "webpack": "4.19.0",
+    "webpack-dev-server": "3.1.8",
+    "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
