--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.7",
     "autoprefixer": "7.1.6",
     "babel-jest": "20.0.3",
     "babel-loader": "8.0.2",
