--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-styleguidist": "^7.3.8",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
+    "styled-components": "^3.4.6",
     "sw-precache-webpack-plugin": "0.11.5",
     "typescript": "^3.0.3",
     "url-loader": "1.1.1",
