--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@bebraw/react-docgen-typescript": "^1.8.1",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "autoprefixer": "7.1.6",
@@ -41,7 +42,6 @@
     "raf": "3.4.0",
     "react": "^16.5.1",
     "react-dev-utils": "^5.0.2",
-    "react-docgen-typescript": "^1.8.1",
     "react-dom": "^16.5.1",
     "react-styleguidist": "^7.3.8",
     "resolve": "1.6.0",
