--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "raf": "3.4.0",
     "react": "^16.5.1",
     "react-dev-utils": "^5.0.2",
+    "react-docgen": "3.0.0-beta12",
     "react-dom": "^16.5.1",
     "react-styleguidist": "^7.3.8",
     "resolve": "1.6.0",
