--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-styled-components": "^1.7.1",
     "chalk": "1.1.3",
     "css-loader": "1.0.0",
+    "cypress": "^3.1.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -46,6 +47,7 @@
     "react-dom": "^16.5.1",
     "react-styleguidist": "^7.3.8",
     "resolve": "1.6.0",
+    "start-server-and-test": "^1.7.1",
     "style-loader": "0.19.0",
     "styled-components": "^3.4.6",
     "sw-precache-webpack-plugin": "0.11.5",
@@ -60,6 +62,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
+    "test:styleguide": "start-server-and-test styleguide:watch http://localhost:6060 cy:run",
+    "cy:run": "cypress run",
     "styleguide:build": "styleguidist build",
     "styleguide:watch": "styleguidist server"
   },
