chore: Update to the official dependency
No need for custom dependency anymore.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "@bebraw/react-docgen-typescript": "^1.8.2",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "autoprefixer": "7.1.6",
@@ -44,6 +43,7 @@
     "react": "^16.5.1",
     "react-dev-utils": "^5.0.2",
     "react-docgen": "3.0.0-beta12",
+    "react-docgen-typescript": "^1.9.1",
     "react-dom": "^16.5.1",
     "react-styleguidist": "^7.3.8",
     "resolve": "1.6.0",
